--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,5 @@
 
 language: R
 cache: packages
-sudo: false
 
-addons:
-  apt:
-    packages:
-      - gmp
-      - libxml2
-      - glpk
+before_install: R -e 'source("https://install-github.me/r-lib/remotes")'
