--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       - run:
           name: Install package dependencies
           command: R -e "devtools::install_deps(dep = TRUE)"
+	  command: apt-file search GL/glu.h
+	  command: libglu1-mesa-dev: /usr/include/GL/glu.h
+	  command: sudo apt-get install libglu1-mesa-dev
       - run:
           name: Build package
           command: R CMD build .
