--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,64 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+#----------------------------------------------------------------
+# Travis-CI configuration for R packages
+#
+# REFERENCES:
+# * Travis CI: https://travis-ci.org/
+# * r-builder: https://github.com/metacran/r-builder
+#
+# Validate your .travis.yml file at http://lint.travis-ci.org/
+#----------------------------------------------------------------
+language: c
 
-language: R
-cache: packages
+env:
+  global:
+    - RENV="./pkg-build.sh"    # r-builder
+    - R_BUILD_ARGS="--no-manual"
+    - R_CHECK_ARGS="--no-manual --as-cran"
+    - _R_CHECK_CRAN_INCOMING_=TRUE
+    - _R_CHECK_FORCE_SUGGESTS_=false
+    # Need LaTeX? (very time consuming!)
+    - BOOTSTRAP_LATEX=""
+    # Skip building vignettes, which iff LaTeX-based are very
+    # time consuming because LaTeX needs to be installed
+#    - R_BUILD_ARGS="--no-build-vignettes ${R_BUILD_ARGS}"
+#    - R_CHECK_ARGS="--no-build-vignettes ${R_CHECK_ARGS}"
 
-apt-file search GL/glu.h
-libglu1-mesa-dev: /usr/include/GL/glu.h
-sudo apt-get install libglu1-mesa-dev
+  # R versions r-builder should test on (ignored by r-travis)
+  matrix:
+#    - RVERSION=3.6.2
+#    - RVERSION=3.6.2
+    - RVERSION=devel _R_CHECK_FULL_=TRUE
+
+
+before_install:
+  - echo RENV=$RENV
+  - curl -OL https://raw.githubusercontent.com/HenrikBengtsson/r-builder/master/pkg-build.sh;
+  - chmod 755 $RENV
+  - $RENV bootstrap
+  - if [ "BOOTSTRAP_LATEX" == "true" ]; then
+      (cd /tmp && curl -OL http://mirrors.ctan.org/macros/latex/contrib/xcolor.zip && cd /usr/share/texmf/tex/latex && sudo unzip /tmp/xcolor.zip && cd xcolor && sudo latex xcolor.ins && sudo texhash);
+    else
+      export R_RSP_COMPILELATEX_FALLBACK="copy-force";
+    fi
+
+install:
+
+
+ - $RENV install_r R.devices R.methodsS3 R.oo R.utils
+ - $RENV install_r R.rsp rgl
+
+script:
+  - $RENV run_build
+  - $RENV run_check
+
+after_success:
+  - $RENV dump_logs_by_extension out
+  - $RENV install_devtools
+
+after_failure:
+  - $RENV dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
