--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Suggests:
 Depends: R (>= 2.10)
 URL: http://github.com/asalavaty/influential
 BugReports: http://github.com/asalavaty/influential/issues
-License: MIT + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2.9000
