--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Suggests:
     mgcv (>= 1.8-31),
     nortest (>= 1.0-4),
     NNS (>= 0.4.7.1),
+    parallel,
     knitr,
     rmarkdown
 Depends: R (>= 2.10)
