Update according to version 1.0.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,29 @@
 
 export(V)
 export(betweenness)
+export(clusterrank)
+export(collective.influence)
 export(cond.prob.analysis)
 export(degree)
 export(double.cent.assess)
 export(double.cent.assess.noRegression)
 export(graph_from_adjacency_matrix)
 export(graph_from_data_frame)
-export(ihs)
+export(h_index)
+export(hubness.score)
+export(ivi)
+export(ivi.from.indices)
+export(lh_index)
 export(neighborhood.connectivity)
+export(sirir)
+export(spreading.score)
+importFrom(centiserve,clusterrank)
 importFrom(igraph,V)
+importFrom(igraph,as_ids)
 importFrom(igraph,betweenness)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,sir)
+importFrom(igraph,vcount)
+importFrom(utils,tail)
