--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,21 @@
 Package: influential
 Type: Package
-Title: Identification of the Most Influential Nodes (Hubs)
-Version: 0.1.9000
+Title: Identification of the Most Influential Nodes
+Version: 1.0.0
 Author: Adrian (Abbas) Salavaty
 Maintainer: Adrian Salavaty <abbas.salavaty@gmail.com>
 Description: Contains functions for reconstruction of networks from
     adjacency matrices and data frames, analysis of the topology of the network 
     and calculation of centrality measures, and identification of the most
-    influential nodes (network hubs). Also, some functions have been provided
-    for the assessment of dependence and correlation of two network centrality
-    measures as well as the conditional probability of deviation from their
-    corresponding means in opposite direction. 
+    influential nodes. Also, some functions have been provided for the assessment 
+    of dependence and correlation of two network centrality measures as well as 
+    the conditional probability of deviation from their corresponding means in opposite direction.
     Fred Viole and David Nawrocki (2013, ISBN:1490523995).
+    Csardi G, Nepusz T (2006). “The igraph software package for complex network research.” InterJournal, Complex Systems, 1695. http://igraph.org.
+    Adapted algorithms and sources are referenced in function document.
 Imports:
-    igraph
+    igraph,
+    centiserve
 Suggests:
     Hmisc (>= 4.3-0),
     mgcv (>= 1.8-31),
