--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,17 @@ cache:
   - C:\RLibrary
 
 environment:
+ global:
   NOT_CRAN: true
   # env vars that may need to be set, at least temporarily, from time to time
   # see https://github.com/krlmlr/r-appveyor#readme for details
   USE_RTOOLS: true
   R_REMOTES_STANDALONE: true
+ - R_VERSION: release
+ - R_VERSION: oldrel
+  RTOOLS_VERSION: 35
+ - R_VERSION: 3.4.4
+  RTOOLS_VERSION: 34
 
 # Adapt as necessary starting from here
 
