Add a function for importing and conversion of a SIF file into an igraph graph.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(ivi)
 export(ivi.from.indices)
 export(lh_index)
 export(neighborhood.connectivity)
+export(sif2igraph)
 export(sirir)
 export(spreading.score)
 importFrom(centiserve,clusterrank)
