Update the name of the function DDA.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(clusterRank)
 export(collective.influence)
 export(cond.prob.analysis)
 export(degree)
-export(diff.data.assembly)
+export(diff_data.assembly)
 export(double.cent.assess)
 export(double.cent.assess.noRegression)
 export(exir)
