Add ggplot2 to import.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(V)
 export(betweenness)
+export(cent_network.vis)
 export(clusterRank)
 export(collective.influence)
 export(cond.prob.analysis)
@@ -10,8 +11,10 @@ export(diff_data.assembly)
 export(double.cent.assess)
 export(double.cent.assess.noRegression)
 export(exir)
+export(exir.vis)
 export(graph_from_adjacency_matrix)
 export(graph_from_data_frame)
+export(graph_from_incidence_matrix)
 export(h_index)
 export(hubness.score)
 export(ivi)
@@ -27,6 +30,7 @@ importFrom(igraph,betweenness)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,graph_from_incidence_matrix)
 importFrom(igraph,sir)
 importFrom(igraph,vcount)
 importFrom(utils,tail)
