--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports:
     igraph,
     ranger,
     coop,
-    reshape2
+    reshape2,
+    ggplot2
 Suggests:
     Hmisc (>= 4.3-0),
     mgcv (>= 1.8-31),
