--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,8 +29,8 @@ Suggests:
     knitr,
     rmarkdown
 Depends: R (>= 2.10)
-URL: http://github.com/asalavaty/influential
-BugReports: http://github.com/asalavaty/influential/issues
+URL: https://github.com/asalavaty/influential
+BugReports: https://github.com/asalavaty/influential/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
