--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(ivi)
 export(ivi.from.indices)
 export(lh_index)
 export(neighborhood.connectivity)
+export(runExample)
 export(sif2igraph)
 export(sirir)
 export(spreading.score)
