--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(betweenness)
 export(cent_network.vis)
 export(clusterRank)
 export(collective.influence)
+export(comp_manipulate)
 export(cond.prob.analysis)
 export(degree)
 export(diff_data.assembly)
@@ -21,7 +22,7 @@ export(ivi)
 export(ivi.from.indices)
 export(lh_index)
 export(neighborhood.connectivity)
-export(runExample)
+export(runShinyApp)
 export(sif2igraph)
 export(sirir)
 export(spreading.score)
