--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Suggests:
     knitr,
     rmarkdown
 Depends: R (>= 2.10)
-URL: https://github.com/asalavaty/influential
+URL: https://github.com/asalavaty/influential, https://asalavaty.github.io/influential/
 BugReports: https://github.com/asalavaty/influential/issues
 License: GPL-3
 Encoding: UTF-8
