--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(double.cent.assess)
 export(double.cent.assess.noRegression)
 export(exir)
 export(exir.vis)
+export(fcor)
 export(graph_from_adjacency_matrix)
 export(graph_from_data_frame)
 export(graph_from_incidence_matrix)
