Add parallel import to Namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(runShinyApp)
 export(sif2igraph)
 export(sirir)
 export(spreading.score)
+importFrom(foreach,"%dopar%")
 importFrom(igraph,V)
 importFrom(igraph,as_ids)
 importFrom(igraph,degree)
