Make the comp_manipulate capable of parallel processing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(sif2igraph)
 export(sirir)
 export(spreading.score)
 importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(igraph,V)
 importFrom(igraph,as_ids)
 importFrom(igraph,degree)
