--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,18 +3,24 @@ Type: Package
 Title: Identification and Classification of the Most Influential Nodes
 Language: en-US
 Version: 2.3.0
-Author: Adrian Salavaty [aut, cre], Mirana Ramialison [ths], Peter D. Currie [ths]
-Maintainer: Adrian Salavaty <abbas.salavaty@gmail.com>
-Description: Contains functions for the classification and ranking of top candidate features, reconstruction of networks from
-    adjacency matrices and data frames, analysis of the topology of the network 
-    and calculation of centrality measures, and identification of the most
-    influential nodes. Also, a function is provided for running SIRIR model, which 
-    is the combination of leave-one-out cross validation technique and the conventional SIR model, on a network to unsupervisedly rank the true influence of vertices. Additionally, some functions have been provided for the assessment 
-    of dependence and correlation of two network centrality measures as well as 
-    the conditional probability of deviation from their corresponding means in opposite direction.
-    Fred Viole and David Nawrocki (2013, ISBN:1490523995).
-    Csardi G, Nepusz T (2006). "The igraph software package for complex network research." InterJournal, Complex Systems, 1695.
-    Adopted algorithms and sources are referenced in function document.
+Authors@R:
+    c(
+      person("Adrian", "Salavaty",
+       role = c("aut", "cre"),
+       email = "abbas.salavaty@gmail.com",
+       comment = c(ORCID = "0000-0001-9320-5889")),
+      person("Mirana", "Ramialison", role = "ths"),
+      person(c("Peter", "D."), "Currie", role = "ths")
+    )
+Description: Provides functions for classification and ranking of candidate
+    features, reconstruction of networks from adjacency matrices and data
+    frames, topological analysis, and calculation of centrality measures. The
+    package includes the SIRIR model, which combines leave-one-out
+    cross-validation with the conventional SIR model to rank vertex influence
+    in an unsupervised manner. Additional functions support assessment of
+    dependence and correlation between network centrality measures, as well as
+    estimation of conditional probabilities of deviation from their
+    corresponding means in opposite directions.
 Imports:
     igraph,
     janitor,
@@ -22,13 +28,13 @@ Imports:
     foreach,
     doParallel,
     ggplot2,
-    Rcpp,
-    BiocManager
+    Rcpp
 Suggests:
     Hmisc (>= 4.3-0),
     mgcv (>= 1.8-31),
     nortest (>= 1.0-4),
     NNS (>= 0.4.7.1),
+    BiocManager,
     readr,
     parallel,
     shiny,
@@ -41,7 +47,7 @@ Suggests:
     DT,
     knitr,
     rmarkdown
-Depends: R (>= 2.10)
+Depends: R (>= 4.0.0)
 URL: https://github.com/asalavaty/influential, https://asalavaty.github.io/influential/
 BugReports: https://github.com/asalavaty/influential/issues
 License: GPL-3
